--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -553,7 +553,7 @@
                         params.append('end_year', endDate.getFullYear());
                     }
 
-                    const response = await fetch(`http://localhost:3000/api/bonus/history?${params.toString()}`);
+                    const response = await fetch(`http://43.205.129.17:3062/api/bonus/history?${params.toString()}`);
                     
                     if (!response.ok) {
                         const errorData = await response.json();
